integrated Unity test framework. Currently a single stub test.

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,9 @@ monitor_filters =
 lib_ignore =
 	ESP8266Scheduler
 build_unflags = -std=gnu++11
-build_flags = -std=gnu++17
+build_flags = 
+    -std=gnu++17
+    -DFOS_SERIAL_BAUDRATE=${esp32.monitor_speed}
 
 [esp8266]
 platform = espressif8266
@@ -62,6 +64,7 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
+test_filter = kernel/test_structure
 extends = serial # or ota
 
 [serial]
