--- a/platformio.ini
+++ b/platformio.ini
@@ -64,7 +64,7 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-test_filter = kernel/test_structure
+# test_filter = kernel/test_structure
 extends = serial # or ota
 
 [serial]
