--- a/platformio.ini
+++ b/platformio.ini
@@ -64,7 +64,7 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-# test_ignore = kernel/test_structure
+#test_filter = kernel/process/test_actor/broker/test_local_broker
 extends = serial # or ota
 
 [serial]
