added thread and fiber implementations for ESP32 architectures. No test cases provided yet.

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,7 +27,7 @@ lib_ignore =
 build_unflags = -std=gnu++11
 build_flags = 
     -std=gnu++17
-    -DFOS_SERIAL_BAUDRATE=${esp32.monitor_speed}
+    -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
 
 [esp8266]
 platform = espressif8266
@@ -38,6 +38,9 @@ test_speed = ${this.monitor_speed}
 monitor_filters =
 	${env.monitor_filters}
 	esp8266_exception_decoder
+build_flags = 
+    -std=gnu++17
+    -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
 
 [boards]
 esp8266.d1_mini = d1_mini
