--- a/platformio.ini
+++ b/platformio.ini
@@ -67,7 +67,7 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-#test_filter = kernel/process/test_actor/broker/test_local_broker
+test_filter = kernel/process/actor/test_actor
 extends = serial # or ota
 
 [serial]
