added LOGGING macros to make test case wirting easier. will ultimately move to a Logging actor. LocalBroker and base Actor tested.

--- a/platformio.ini
+++ b/platformio.ini
@@ -63,6 +63,7 @@ build_src_filter =
     +<kernel/structure/*>
 lib_deps =
 	bblanchon/ArduinoJson@^7.0.3
+	robtillaart/ANSI@^0.3.1
 build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
