--- a/platformio.ini
+++ b/platformio.ini
@@ -68,7 +68,7 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-test_filter = kernel/process/actor/test_actor
+# test_filter = kernel/process/esp32/test_scheduler
 extends = serial # or ota
 
 [serial]
