stubbed out wifi actor.

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,6 +6,7 @@
 [platformio]
 name = FatOS
 description = Fabric-Oriented Operating System for ESP32 and ESP8266 Microcontrollers
+extra_configs = .wifi.ini
 
 ######################################
 ##### ESP32/8266 MICROPROCESSORS #####
@@ -24,10 +25,7 @@ monitor_filters =
 	esp32_exception_decoder
 lib_ignore =
 	ESP8266Scheduler
-build_unflags = -std=gnu++11
-build_flags = 
-    -std=gnu++17
-    -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
+
 
 [esp8266]
 platform = espressif8266
@@ -58,15 +56,17 @@ esp32.s3 = esp32s3box
 framework = arduino
 board_build.filesystem = littlefs
 extra_scripts = pre:scripts/environment.py
-build_src_filter = 
-	+<main.cpp>
-    +<kernel/structure/*>
+build_src_filter = +<*>
 lib_deps =
 	bblanchon/ArduinoJson@^7.0.3
 	robtillaart/ANSI@^0.3.1
 build_flags =
+  	-std=gnu++17
+    -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
+build_unflags = 
+	-std=gnu++11
 test_framework = unity
 # test_filter = kernel/process/esp32/test_scheduler
 extends = serial # or ota
