connected together various kernel processes. wifi, mqtt, and respective routers. currently just some play code in main.cpp.

--- a/platformio.ini
+++ b/platformio.ini
@@ -60,13 +60,15 @@ build_src_filter = +<*>
 lib_deps =
 	bblanchon/ArduinoJson@^7.0.3
 	robtillaart/ANSI@^0.3.1
+	knolleary/PubSubClient@^2.8
+build_unflags = 
+	-std=gnu++11
 build_flags =
+	${wifi.build_flags}
   	-std=gnu++17
     -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
-build_unflags = 
-	-std=gnu++11
 test_framework = unity
 # test_filter = kernel/process/esp32/test_scheduler
 extends = serial # or ota
