--- a/platformio.ini
+++ b/platformio.ini
@@ -61,6 +61,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.0.3
 	robtillaart/ANSI@^0.3.1
 	knolleary/PubSubClient@^2.8
+	dvarrel/ESPping@^1.0.4
 build_unflags = 
 	-std=gnu++11
 build_flags =
