--- a/platformio.ini
+++ b/platformio.ini
@@ -62,6 +62,7 @@ lib_deps =
 	robtillaart/ANSI@^0.3.1
 	knolleary/PubSubClient@^2.8
 	dvarrel/ESPping@^1.0.4
+	lennarthennigs/ESP Telnet@^2.2.1
 build_unflags = 
 	-std=gnu++11
 build_flags =
