added test cases for fURI.retract(). Added WiFi to dependencies for ESPTelnet.

--- a/platformio.ini
+++ b/platformio.ini
@@ -58,6 +58,7 @@ board_build.filesystem = littlefs
 extra_scripts = pre:scripts/environment.py
 build_src_filter = +<*>
 lib_deps =
+	WiFi # necessary for ESPTelnet
 	bblanchon/ArduinoJson@^7.0.3
 	robtillaart/ANSI@^0.3.1
 	knolleary/PubSubClient@^2.8
