added fURI host setting. added fURI host resolution relative to another fURI. Telnet now resolves fURIs to current fURI for a more natural experience.

--- a/platformio.ini
+++ b/platformio.ini
@@ -73,7 +73,7 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-#test_filter = kernel/process/actor/test_actor
+#test_filter = kernel/test_structure
 extends = serial # or ota
 
 [serial]
