adaded query read/write capabilities to fURI. this component of the URI will be used to query incoming and outgoing routes from a particular source fURI. Effectively enabling a graph of fURis to be walked and discovered.

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,8 +4,8 @@
 ######################################
 
 [platformio]
-name = FatOS
-description = Fabric-Oriented Operating System for ESP32 and ESP8266 Microcontrollers
+name = FhatOS
+description = A Message Passing Operating System for ESP32 and ESP8266 Microcontrollers
 extra_configs = .wifi.ini
 
 ######################################
