really cleaned up scheduler API. spawn(), destroy(), and count() are all that is avaialble. Moreover, all seraching through processes is done via ID pattern matching.

--- a/platformio.ini
+++ b/platformio.ini
@@ -66,6 +66,7 @@ lib_deps =
 	lennarthennigs/ESP Telnet@^2.2.1
 build_unflags = 
 	-std=gnu++11
+	-fno-rtti
 build_flags =
 	${wifi.build_flags}
   	-std=gnu++17
