--- a/platformio.ini
+++ b/platformio.ini
@@ -73,7 +73,9 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-# test_filter = kernel/process/util/test_mutex #test_structure
+test_filter = 
+	kernel/test_structure 
+	# kernel/process/util/test_mutex 
 extends = serial # or ota
 
 [serial]
