pulled message struct out of router. messages now contain a payload struct with respective type conversion methods.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,6 @@
-######################################
-####### PLATFORM.IO BUILD FILE #######
-######## http://platformio.org #######
-######################################
+######################
+####### FhatOS #######
+######################
 
 [platformio]
 name = FhatOS
@@ -60,7 +59,6 @@ build_src_filter = +<*>
 lib_deps =
 	WiFi # necessary for ESPTelnet
 	bblanchon/ArduinoJson@^7.0.3
-	robtillaart/ANSI@^0.3.1
 	knolleary/PubSubClient@^2.8
 	dvarrel/ESPping@^1.0.4
 	lennarthennigs/ESP Telnet@^2.2.1
