worked on Message serialization over MQTT to align it with the semantics of fhat message.

--- a/platformio.ini
+++ b/platformio.ini
@@ -71,7 +71,8 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-# test_filter = 
+test_filter = 
+	kernel/process/router/test_message
 	# kernel/test_structure 
 	# kernel/process/util/test_mutex 
 extends = serial # or ota
