typedef of Mail. new ParentProcess class enabling the linking together of processes where parent processes are responsible for their children's lifecycle. Suspect process and scheduler will soon merge. implemented query(). Specific to fPing for now. Demo'd fhatOS. went well.

--- a/platformio.ini
+++ b/platformio.ini
@@ -58,6 +58,9 @@ extra_scripts = pre:scripts/environment.py
 build_src_filter = +<*>
 lib_deps =
 	WiFi # necessary for ESPTelnet
+	ArduinoOTA
+	Update
+	ESPmDNS
 	bblanchon/ArduinoJson@^7.0.3
 	knolleary/PubSubClient@^2.8
 	dvarrel/ESPping@^1.0.4
