moved gnu 2a for compilation.

--- a/platformio.ini
+++ b/platformio.ini
@@ -69,7 +69,7 @@ build_unflags =
 	-std=gnu++11
 build_flags =
 	${wifi.build_flags}
-  	-std=gnu++17
+  	-std=gnu++2a
     -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
