--- a/platformio.ini
+++ b/platformio.ini
@@ -69,13 +69,13 @@ build_unflags =
 	-std=gnu++11
 build_flags =
 	${wifi.build_flags}
-  	-std=gnu++2a
+  	-std=gnu++17
     -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
 # test_filter = 
-	# kernel/process/router/test_message
+#	kernel/process/router/test_message
 	# kernel/test_structure 
 	# kernel/process/util/test_mutex 
 extends = serial # or ota
