lots of good work here. rock solid multi-reader/single-writer router implementation -- nicely tested. Actor.serialize()/deserialize() allows Actors to be sent over the wire or flashed to ROM. mutex supports locking and unlocking as atomic operations.

--- a/platformio.ini
+++ b/platformio.ini
@@ -69,12 +69,13 @@ build_unflags =
 	-std=gnu++11
 build_flags =
 	${wifi.build_flags}
-  	-std=gnu++17
+  	-std=gnu++2a
     -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-# test_filter = 
+#test_filter = 
+#	kernel/process/actor/test_actor
 #	kernel/process/router/test_message
 	# kernel/test_structure 
 	# kernel/process/util/test_mutex 
