stubbed a prototype of flang which is simplified mm-ADT for embedded systems.

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,7 +74,8 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-#test_filter = 
+test_filter = 
+	kernel/language/test_fluent
 #	kernel/process/actor/test_actor
 #	kernel/process/router/test_message
 	# kernel/test_structure 
