--- a/platformio.ini
+++ b/platformio.ini
@@ -76,6 +76,7 @@ build_flags =
 test_framework = unity
 test_filter = 
 	kernel/language/test_fluent
+	kernel/language/test_obj
 #	kernel/process/actor/test_actor
 #	kernel/process/router/test_message
 	# kernel/test_structure 
