fixed an insidious bug in the Scheduler where a value wasn't being returned and nullptr. Why doesnt the C compiler say anything about hte lack of a return statement. Crazy.

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,9 +74,9 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-test_filter = 
-	kernel/language/test_fluent
-	kernel/language/test_obj
+#test_filter = 
+#	kernel/language/test_fluent
+#	kernel/language/test_obj
 #	kernel/process/actor/test_actor
 #	kernel/process/router/test_message
 	# kernel/test_structure 
