added instruction set and processor header files. fhatlang is coming along nicely.

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,6 @@ monitor_filters =
 lib_ignore =
 	ESP8266Scheduler
 
-
 [esp8266]
 platform = espressif8266
 board = ${boards.esp8266.d1_mini}
@@ -35,9 +34,9 @@ test_speed = ${this.monitor_speed}
 monitor_filters =
 	${env.monitor_filters}
 	esp8266_exception_decoder
-build_flags = 
-    -std=gnu++17
-    -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
+build_flags =
+	-std=gnu++17
+	-DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
 
 [boards]
 esp8266.d1_mini = d1_mini
@@ -65,22 +64,22 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	dvarrel/ESPping@^1.0.4
 	lennarthennigs/ESP Telnet@^2.2.1
-build_unflags = 
+build_unflags =
 	-std=gnu++11
 build_flags =
 	${wifi.build_flags}
-  	-std=gnu++2a
-    -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
+	-std=gnu++2a
+	-DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-#test_filter = 
+#test_filter =
 #	kernel/language/test_fluent
 #	kernel/language/test_obj
 #	kernel/process/actor/test_actor
 #	kernel/process/router/test_message
-	# kernel/test_structure 
-	# kernel/process/util/test_mutex 
+	 #	# kernel/test_structure
+	 #	# kernel/process/util/test_mutex
 extends = serial # or ota
 
 [serial]
@@ -92,3 +91,17 @@ upload_port = 192.168.88.224
 
 [env:fhatos]
 extends = esp32
+
+[env:native]
+framework=
+platform = native
+lib_compat_mode = off
+#lib_archive
+test_filter =
+	kernel/language/test_fluent
+	kernel/language/test_obj
+lib_deps =
+	String
+build_flags =
+	${env.build_flags}
+	-DNATIVE
