--- a/platformio.ini
+++ b/platformio.ini
@@ -73,8 +73,8 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-#test_filter =
-#	kernel/language/test_fluent
+test_filter =
+	kernel/language/test_fluent
 #	kernel/language/test_obj
 #	kernel/process/actor/test_actor
 #	kernel/process/router/test_message
