have an initial prototype of fFS working. An actor that exposes the underlying filesystem (LittleFS only for now) within the fURI address space.

--- a/platformio.ini
+++ b/platformio.ini
@@ -60,6 +60,8 @@ lib_deps =
 	ArduinoOTA
 	Update
 	ESPmDNS
+	FS
+	LittleFS
 	bblanchon/ArduinoJson@^7.0.3
 	knolleary/PubSubClient@^2.8
 	dvarrel/ESPping@^1.0.4
@@ -73,8 +75,8 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-test_filter =
-	kernel/language/test_fluent
+#test_filter =
+#	kernel/language/test_fluent
 #	kernel/language/test_obj
 #	kernel/process/actor/test_actor
 #	kernel/process/router/test_message
