slowly refactoring to enable native gc testing of the codebase. maybe 75 percent doesn't require the microcontroller and can be built and tested on the local machine. This will greatly increase the test turn around time as flashing can be removed from the pattern.

--- a/platformio.ini
+++ b/platformio.ini
@@ -76,12 +76,12 @@ build_flags =
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
 #test_filter =
-#	kernel/language/test_fluent
-#	kernel/language/test_obj
-#	kernel/process/actor/test_actor
-#	kernel/process/router/test_message
-	 #	# kernel/test_structure
-	 #	# kernel/process/util/test_mutex
+#	language/test_fluent
+#	language/test_obj
+#	process/actor/test_actor
+#	process/router/test_message
+	 #	# test_furi
+	 #	# process/util/test_mutex
 extends = serial # or ota
 
 [serial]
@@ -93,3 +93,15 @@ upload_port = 192.168.88.224
 
 [env:fhatos]
 extends = esp32
+
+[env:native]
+platform = native
+framework =
+lib_deps =
+build_src_filter =
+	+<../src/**/*>
+build_flags =
+	${env.build_flags}
+	-DNATIVE
+test_filter =
+	language/test_fluent
