a stub of native architecture testing. this is huge.

--- a/platformio.ini
+++ b/platformio.ini
@@ -98,10 +98,11 @@ extends = esp32
 platform = native
 framework =
 lib_deps =
+test_framework = unity
 build_src_filter =
-	+<../src/**/*>
+	+<../src/native/*>
 build_flags =
 	${env.build_flags}
 	-DNATIVE
 test_filter =
-	language/test_fluent
+	test_native
