have the first big split between native gcc build/test and esp gcc build/test. some macro nastiness that needs to be thought through and cleaned up, but its looking good. native tets take a few seconds to run vs. minutes for the esp tests.

--- a/platformio.ini
+++ b/platformio.ini
@@ -75,13 +75,6 @@ build_flags =
 	-DUNITY_OUTPUT_COLOR
 	-DUNITY_INCLUDE_PRINT_FORMATTED
 test_framework = unity
-#test_filter =
-#	language/test_fluent
-#	language/test_obj
-#	process/actor/test_actor
-#	process/router/test_message
-	 #	# test_furi
-	 #	# process/util/test_mutex
 extends = serial # or ota
 
 [serial]
@@ -93,6 +86,16 @@ upload_port = 192.168.88.224
 
 [env:fhatos]
 extends = esp32
+#test_ignore =
+#	language/test_fluent
+#	language/test_obj
+#test_filter =
+#	language/test_fluent
+#	language/test_obj
+#	process/actor/test_actor
+#	process/router/test_message
+#	# test_furi
+#	# process/util/test_mutex
 
 [env:native]
 platform = native
@@ -100,9 +103,11 @@ framework =
 lib_deps =
 test_framework = unity
 build_src_filter =
-	+<../src/native/*>
+	+<fhatos_native.hpp>
+	+<language/**.*>
 build_flags =
 	${env.build_flags}
 	-DNATIVE
 test_filter =
-	test_native
+	language/test_fluent
+	language/test_obj
