moved BinaryObj byte array to the heap. Maintaining it on the stack was becoming untenable. Still getting comfortable with the life cycle of malloc'd pointer. test suite is thicc'ening up nicely.

--- a/platformio.ini
+++ b/platformio.ini
@@ -92,8 +92,9 @@ extends = esp32
 #test_filter =
 #	language/test_fluent
 #	language/test_obj
+#	language/test_binary_obj
 #	process/actor/test_actor
-#	process/router/test_message
+#	process/router/test_router
 #	# test_furi
 #	# process/util/test_mutex
 
@@ -111,3 +112,4 @@ build_flags =
 test_filter =
 	language/test_fluent
 	language/test_obj
+	language/test_binary_obj
