converted numerous classes over to use standard C classes instead of Arduino equivalents. This enables more of the test suite to execute on local hardware as opposed to on a microprocessor (orders of magnitude faster). flushed out the query() api more -- starting to stabilize on the relationship between processes and their child processes and how they are all managed by a single scheduler.

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,32 +11,51 @@ extra_configs = .wifi.ini
 ##### ESP32/8266 MICROPROCESSORS #####
 ######################################
 
+[common]
+monitor_speed = 115200
+build_unflags =
+    -std=gnu++11
+build_flags =
+    ${wifi.build_flags}
+    -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
+    -DUNITY_OUTPUT_COLOR
+    -DUNITY_INCLUDE_PRINT_FORMATTED
+
+
 [esp32]
 platform = espressif32
-board = ${boards.esp32.d1_mini}
+board = ${boards.esp32.d1_mini} # ${boards.esp32.s3}
 board_build.flash_mode = qio
 upload_flags = --no-stub
 upload_speed = 921600
-monitor_speed = 115200
 test_speed = ${this.monitor_speed}
+monitor_speed = ${common.monitor_speed}
 monitor_filters =
-	${env.monitor_filters}
-	esp32_exception_decoder
+    ${env.monitor_filters}
+    esp32_exception_decoder
 lib_ignore =
-	ESP8266Scheduler
+    ESP8266Scheduler
+build_unflags =
+    ${common.build_unflags}
+build_flags =
+    ${common.build_flags}
+    -std=gnu++2a
+
 
 [esp8266]
 platform = espressif8266
 board = ${boards.esp8266.d1_mini}
 upload_speed = 512000
-monitor_speed = 115200
+monitor_speed = ${common.monitor_speed}
 test_speed = ${this.monitor_speed}
 monitor_filters =
-	${env.monitor_filters}
-	esp8266_exception_decoder
+    ${env.monitor_filters}
+    esp8266_exception_decoder
+build_unflags =
+    ${common.build_unflags}
 build_flags =
-	-std=gnu++17
-	-DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
+    ${common.build_flags}
+    -std=gnu++17
 
 [boards]
 esp8266.d1_mini = d1_mini
@@ -53,28 +72,20 @@ esp32.s3 = esp32s3box
 [env]
 framework = arduino
 board_build.filesystem = littlefs
+test_framework = unity
 extra_scripts = pre:scripts/environment.py
 build_src_filter = +<*>
 lib_deps =
-	WiFi # necessary for ESPTelnet
-	ArduinoOTA
-	Update
-	ESPmDNS
-	FS
-	LittleFS
-	bblanchon/ArduinoJson@^7.0.3
-	knolleary/PubSubClient@^2.8
-	dvarrel/ESPping@^1.0.4
-	lennarthennigs/ESP Telnet@^2.2.1
-build_unflags =
-	-std=gnu++11
-build_flags =
-	${wifi.build_flags}
-	-std=gnu++2a
-	-DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
-	-DUNITY_OUTPUT_COLOR
-	-DUNITY_INCLUDE_PRINT_FORMATTED
-test_framework = unity
+    WiFi # necessary for ESPTelnet
+    ArduinoOTA
+    Update
+    ESPmDNS
+    FS
+    LittleFS
+    bblanchon/ArduinoJson@^7.0.3
+    knolleary/PubSubClient@^2.8
+    dvarrel/ESPping@^1.0.4
+    lennarthennigs/ESP Telnet@^2.2.1
 extends = serial # or ota
 
 [serial]
@@ -86,16 +97,17 @@ upload_port = 192.168.88.224
 
 [env:fhatos]
 extends = esp32
-#test_ignore =
+test_ignore =
 #	language/test_fluent
 #	language/test_obj
+	process/actor/test_actor
 #test_filter =
 #	language/test_fluent
 #	language/test_obj
 #	language/test_binary_obj
 #	process/actor/test_actor
 #	process/router/test_router
-#	# test_furi
+#	structure/test_furi
 #	# process/util/test_mutex
 
 [env:native]
@@ -104,12 +116,15 @@ framework =
 lib_deps =
 test_framework = unity
 build_src_filter =
-	+<fhatos_native.hpp>
-	+<language/**.*>
+    +<fhatos_native.hpp>
+    +<language/**.*>
 build_flags =
-	${env.build_flags}
-	-DNATIVE
+    ${common.build_flags}
+    ${env.build_flags}
+    -std=gnu++2a
+    -DNATIVE
 test_filter =
-	language/test_fluent
-	language/test_obj
-	language/test_binary_obj
+    structure/test_furi
+    language/test_fluent
+    language/test_obj
+    language/test_binary_obj
