created a read-write mutex that allows any number of readers access to a particular resource, but only one writer (and not readers) when writing.

--- a/platformio.ini
+++ b/platformio.ini
@@ -101,7 +101,7 @@ test_ignore =
 #	language/test_fluent
 #	language/test_obj
 	process/actor/test_actor
-#test_filter =
+test_filter =
 #	language/test_fluent
 #	language/test_obj
 #	language/test_binary_obj
