--- a/platformio.ini
+++ b/platformio.ini
@@ -100,6 +100,7 @@ extends = esp32
 test_ignore =
 #	language/test_fluent
 #	language/test_obj
+	language/test_binary_obj
 	process/actor/test_actor
 test_filter =
 #	language/test_fluent
