started on a language parser. c strings are crazy unstable. got to get my pointers vs. references vs. copy down.

--- a/platformio.ini
+++ b/platformio.ini
@@ -125,7 +125,8 @@ build_flags =
     -std=gnu++2a
     -DNATIVE
 test_filter =
-    structure/test_furi
-    language/test_fluent
-    language/test_obj
-    language/test_binary_obj
+    language/test_parser
+    #structure/test_furi
+    #language/test_fluent
+    #language/test_obj
+    #language/test_binary_obj
