first full parse of fhat-lang to bytecode then evaluation of bycode by a simple list-based processor to yield results. neat-o, bro.

--- a/platformio.ini
+++ b/platformio.ini
@@ -126,7 +126,7 @@ build_flags =
     -DNATIVE
 test_filter =
     language/test_parser
-    #structure/test_furi
-    #language/test_fluent
-    #language/test_obj
-    #language/test_binary_obj
+    structure/test_furi
+    language/test_fluent
+    language/test_obj
+    language/test_binary_obj
