implemented standard c thread library for native processes. this means fhatos can now run on any cpu that supports C std. Thus, PCs can be part of a fhatos operating system cluster. still need to implement the fhatos IP interfaces using standard C. native now has mutex test exposed as well as a c native implementation of mutex. good stuff here.

--- a/platformio.ini
+++ b/platformio.ini
@@ -116,18 +116,26 @@ test_filter =
 platform = native
 framework =
 lib_deps =
+upload_protocol =
 test_framework = unity
 build_src_filter =
-    +<fhatos_native.hpp>
+    +<fhatos.hpp>
+    +<process/native/**.*>
+    +<process/*.hpp>
+    +<process/router/**.*>
     +<language/**.*>
+    +<structure/**.*>
+    +<main.cpp>
 build_flags =
     ${common.build_flags}
     ${env.build_flags}
     -std=gnu++2a
     -DNATIVE
 test_filter =
-    language/test_parser
+    util/test_mutex
     structure/test_furi
+    language/test_parser
     language/test_fluent
     language/test_obj
     language/test_binary_obj
+
