integrated local router and actor into native build. this is getting cool.

--- a/platformio.ini
+++ b/platformio.ini
@@ -116,6 +116,7 @@ test_filter =
 platform = native
 framework =
 lib_deps =
+    eclipse/Paho @ ^1.0.0
 upload_protocol =
 test_framework = unity
 build_src_filter =
@@ -132,10 +133,11 @@ build_flags =
     -std=gnu++2a
     -DNATIVE
 test_filter =
-    util/test_mutex
-    structure/test_furi
-    language/test_parser
-    language/test_fluent
-    language/test_obj
-    language/test_binary_obj
+    #util/test_mutex
+    #structure/test_furi
+    #language/test_parser
+    #language/test_fluent
+    #language/test_obj
+    #language/test_binary_obj
+    process/actor/test_actor
 
