have branching in fhatlang working --based on the mm-ADT design of a composed record is a predicate/branch instruction. fixed a pointer issue around enums and mutex. more test cases on parser and fluent. added noobj as the 'null' value for fhatOS.

--- a/platformio.ini
+++ b/platformio.ini
@@ -101,7 +101,7 @@ test_ignore =
 #	language/test_fluent
 #	language/test_obj
 #	language/test_binary_obj
-	process/actor/test_actor
+#	process/actor/test_actor
 test_filter =
 #   language/test_parser
 #	language/test_fluent
@@ -133,11 +133,11 @@ build_flags =
     -std=gnu++2a
     -DNATIVE
 test_filter =
-    #util/test_mutex
-    #structure/test_furi
-    #language/test_parser
-    #language/test_fluent
-    #language/test_obj
-    #language/test_binary_obj
-    process/actor/test_actor
+    util/test_mutex
+    structure/test_furi
+    language/test_parser
+    language/test_fluent
+    language/test_obj
+    language/test_binary_obj
+    #process/actor/test_actor
 
