both esp and native builds of FhatOS pass all the test cases. (except for native throws an exception when shutting down when test -- but the test passes...its a cleanup issue somewhere.

--- a/platformio.ini
+++ b/platformio.ini
@@ -139,5 +139,6 @@ test_filter =
     language/test_fluent
     language/test_obj
     language/test_binary_obj
+    process/router/test_router
     #process/actor/test_actor
 
