reworked Subscriptions, Messages, and Routers to use shared_ptrs for memory management. Finally, the test_actor test suite passes on the native gcc. Sweet.

--- a/platformio.ini
+++ b/platformio.ini
@@ -98,27 +98,21 @@ upload_port = 192.168.88.224
 [env:fhatos]
 extends = esp32
 test_ignore =
-#	language/test_fluent
-#	language/test_obj
-#	language/test_binary_obj
-#	process/actor/test_actor
-test_filter =
-#   language/test_parser
-#	language/test_fluent
-#	language/test_obj
-#	language/test_binary_obj
-#	process/actor/test_actor
-#	process/router/test_router
-#	structure/test_furi
-#	# process/util/test_mutex
+    #util/test_mutex
+    #structure/test_furi
+    #language/test_parser
+    #language/test_fluent
+    #language/test_obj
+    #language/test_binary_obj
+    #process/router/test_router
+    #process/actor/test_actor
 
 [env:native]
 platform = native
 framework =
 lib_deps =
-    eclipse/Paho @ ^1.0.0
+#    eclipse/Paho @ ^1.0.0
 upload_protocol =
-test_framework = unity
 build_src_filter =
     +<fhatos.hpp>
     +<process/native/**.*>
@@ -132,13 +126,13 @@ build_flags =
     ${env.build_flags}
     -std=gnu++2a
     -DNATIVE
-test_filter =
-    util/test_mutex
-    structure/test_furi
-    language/test_parser
-    language/test_fluent
-    language/test_obj
-    language/test_binary_obj
-    process/router/test_router
+test_ignore =
+    #util/test_mutex
+    #structure/test_furi
+    #language/test_parser
+    #language/test_fluent
+    #language/test_obj
+    #language/test_binary_obj
+    #process/router/test_router
     #process/actor/test_actor
 
