renamed fhatos build environment to esp32.

--- a/platformio.ini
+++ b/platformio.ini
@@ -95,7 +95,7 @@ upload_protocol = esptool
 upload_protocol = espota
 upload_port = 192.168.88.224
 
-[env:fhatos]
+[env:esp32]
 extends = esp32
 test_ignore =
     #util/test_mutex
