OBJ_OR_BYTECODE no longer an Obj, but a wrapper that needs to be unwrapped prior to inseration into an instructions.

--- a/platformio.ini
+++ b/platformio.ini
@@ -127,12 +127,12 @@ build_flags =
     -std=gnu++2a
     -DNATIVE
 test_ignore =
-    #util/test_mutex
-    #structure/test_furi
+    util/test_mutex
+    structure/test_furi
     #language/test_parser
     #language/test_fluent
-    #language/test_obj
-    #language/test_binary_obj
-    #process/router/test_router
-    #process/actor/test_actor
+    language/test_obj
+    language/test_binary_obj
+    process/router/test_router
+    process/actor/test_actor
 
