stubed RelationalInst which is an enum configurable instruction for eq, neq, gt, gte, lt, lte.

--- a/platformio.ini
+++ b/platformio.ini
@@ -95,18 +95,9 @@ upload_protocol = esptool
 upload_protocol = espota
 upload_port = 192.168.88.224
 
-[env:esp32]
-extends = esp32
-test_ignore =
-    #util/test_mutex
-    #structure/test_furi
-    #language/test_parser
-    #language/test_fluent
-    #language/test_obj
-    #language/test_binary_obj
-    #process/router/test_router
-    #process/actor/test_actor
-
+############################################
+################## NATIVE ##################
+############################################
 [env:native]
 platform = native
 framework =
@@ -127,12 +118,26 @@ build_flags =
     -std=gnu++2a
     -DNATIVE
 test_ignore =
-    util/test_mutex
-    structure/test_furi
+    #util/test_mutex
+    #structure/test_furi
     #language/test_parser
     #language/test_fluent
-    language/test_obj
-    language/test_binary_obj
-    process/router/test_router
-    process/actor/test_actor
+    #language/test_obj
+    #language/test_binary_obj
+    #process/router/test_router
+    #process/actor/test_actor
 
+###########################################
+################## ESP32 ##################
+###########################################
+[env:esp32]
+extends = esp32
+test_ignore =
+#util/test_mutex
+#structure/test_furi
+#language/test_parser
+#language/test_fluent
+#language/test_obj
+#language/test_binary_obj
+#process/router/test_router
+#process/actor/test_actor
