added CMakeList.txt build file for CMake. Currently using PlatformIO for the build process, but seems CMakeLists is the tried and true build system.. so far, just a stub.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,27 @@ scripts/__pycache__
 .DS_Store
 .wifi.ini
 .idea
+
+# Compiled Object files
+**/.DS_Store
+*.slo
+*.lo
+*.o
+*.obj
+
+# Executables
+*.exe
+*.out
+*.app
+
+# CMake files
+**/cmake-build-debug
+**/CMakeCache.txt
+**/cmake_install.cmake
+**/install_manifest.txt
+**/CMakeFiles/
+**/CTestTestfile.cmake
+**/Makefile
+**/*.cbp
+**/CMakeScripts
+**/compile_commands.json
