--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,16 @@ set(CMAKE_CXX_STANDARD 20)
 # Add main.cpp file of the project root directory as a source file
 include_directories(src)
 set(SOURCE_FILES src/main.cpp)
-add_executable(fhatos ${SOURCE_FILES})
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+set_target_properties(
+        ${PROJECT_NAME}
+        PROPERTIES
+        OUTPUT_NAME ${PROJECT_NAME}
+        SUFFIX ".out"
+)
 
-target_compile_definitions (fhatos PRIVATE NATIVE)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
+target_compile_definitions(${PROJECT_NAME} PRIVATE NATIVE)
 cmake_print_variables(CMAKE_CXX_COMPILER_ID)
 cmake_print_variables(CMAKE_CXX_COMPILER_VERSION)
-cmake_print_variables(NATIVE)
-
-# Add executable target with source files listed in SOURCE_FILES variable
 
