--- a/platformio.ini
+++ b/platformio.ini
@@ -117,6 +117,8 @@ build_flags =
     ${env.build_flags}
     -std=gnu++2a
     -DNATIVE
+test_filter =
+    #language/test_parser
 test_ignore =
     #util/test_mutex
     #structure/test_furi
@@ -132,6 +134,8 @@ test_ignore =
 ###########################################
 [env:esp32]
 extends = esp32
+test_filter =
+    #language/test_parser
 test_ignore =
 #util/test_mutex
 #structure/test_furi
