have the CMakeLists building project sources and dependecies such that both make and platformio build systems function properly (one build for both systems). Also, works for both Linux and ESP compilation and testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,16 +4,7 @@ cmake_minimum_required(VERSION 3.29)  # CMake version check
 project(fhatos)
 set(CMAKE_CXX_STANDARD 20)
 
-######## PROJECT LIBRARY
-include_directories(src)
-set(SOURCE_FILES src/main.cpp)
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-set_target_properties(
-        ${PROJECT_NAME}
-        PROPERTIES
-        OUTPUT_NAME ${PROJECT_NAME}
-        SUFFIX ".out"
-)
+
 ####################################
 ######## EXTERNAL LIBRARIES ########
 ####################################
@@ -24,18 +15,33 @@ FetchContent_Declare(
         GIT_TAG v1.1.0
 )
 FetchContent_MakeAvailable(ordered_map)
-target_link_libraries(${PROJECT_NAME} PUBLIC ordered_map)
+install(DIRECTORY _deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_SOURCE_DIR}/include/tsl)
+#target_link_libraries(${PROJECT_NAME} PUBLIC tsl::ordered_map)
 ### LEXY: DSL PARSING
 FetchContent_Declare(lexy URL https://lexy.foonathan.net/download/lexy-src.zip)
 FetchContent_MakeAvailable(lexy)
-target_link_libraries(${PROJECT_NAME} PUBLIC lexy)
+install(DIRECTORY _deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_SOURCE_DIR}/include/lexy)
 ####################################
 ####################################
 
+
+
+######## PROJECT LIBRARY
+include_directories(src)
+set(SOURCE_FILES src/main.cpp)
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+set_target_properties(
+        ${PROJECT_NAME}
+        PROPERTIES
+        OUTPUT_NAME ${PROJECT_NAME}
+        SUFFIX ".out"
+)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_compile_definitions(${PROJECT_NAME} PRIVATE NATIVE)
 cmake_print_variables(CMAKE_CXX_COMPILER_ID)
 cmake_print_variables(CMAKE_CXX_COMPILER_VERSION)
+include_directories(${CMAKE_SOURCE_DIR}/include)
+
 
 
 #####
