--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,28 +4,6 @@ cmake_minimum_required(VERSION 3.29)  # CMake version check
 project(fhatos)
 set(CMAKE_CXX_STANDARD 20)
 
-
-####################################
-######## EXTERNAL LIBRARIES ########
-####################################
-### ORDERED_MAP: INSERT ORDER MAP IMPLEMENTATION
-FetchContent_Declare(
-        ordered_map
-        GIT_REPOSITORY https://github.com/Tessil/ordered-map.git
-        GIT_TAG v1.1.0
-)
-FetchContent_MakeAvailable(ordered_map)
-install(DIRECTORY _deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_SOURCE_DIR}/include/tsl)
-#target_link_libraries(${PROJECT_NAME} PUBLIC tsl::ordered_map)
-### LEXY: DSL PARSING
-FetchContent_Declare(lexy URL https://lexy.foonathan.net/download/lexy-src.zip)
-FetchContent_MakeAvailable(lexy)
-install(DIRECTORY _deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_SOURCE_DIR}/include/lexy)
-####################################
-####################################
-
-
-
 ######## PROJECT LIBRARY
 include_directories(src)
 set(SOURCE_FILES src/main.cpp)
@@ -42,7 +20,25 @@ cmake_print_variables(CMAKE_CXX_COMPILER_ID)
 cmake_print_variables(CMAKE_CXX_COMPILER_VERSION)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-
+####################################
+######## EXTERNAL LIBRARIES ########
+####################################
+### ORDERED_MAP: INSERT ORDER MAP IMPLEMENTATION
+FetchContent_Declare(
+        ordered_map
+        GIT_REPOSITORY https://github.com/Tessil/ordered-map.git
+        GIT_TAG v1.1.0
+)
+FetchContent_MakeAvailable(ordered_map)
+install(DIRECTORY _deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_SOURCE_DIR}/include/tsl)
+target_link_libraries(${PROJECT_NAME} PUBLIC tsl::ordered_map)
+### LEXY: DSL PARSING
+FetchContent_Declare(lexy URL https://lexy.foonathan.net/download/lexy-src.zip)
+FetchContent_MakeAvailable(lexy)
+install(DIRECTORY _deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_SOURCE_DIR}/include/lexy)
+target_link_libraries(${PROJECT_NAME} PUBLIC foonathan::lexy)
+####################################
+####################################
 
 #####
 
