--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -66,7 +66,7 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: sudo cmake ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}; sudo cmake -P ${{ steps.strings.outputs.build-output-dir }}/cmake_install.cmake --config ${{ matrix.build_type }};
+      run: sudo cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}; sudo cmake -P ${{ steps.strings.outputs.build-output-dir }}/cmake_install.cmake
 
     - name: Test
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
