--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,12 +30,12 @@ FetchContent_Declare(
         GIT_TAG v1.1.0
 )
 FetchContent_MakeAvailable(ordered_map)
-install(DIRECTORY _deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_SOURCE_DIR}/include/tsl)
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_SOURCE_DIR}/include/tsl)
 target_link_libraries(${PROJECT_NAME} PUBLIC tsl::ordered_map)
 ### LEXY: DSL PARSING
 FetchContent_Declare(lexy URL https://lexy.foonathan.net/download/lexy-src.zip)
 FetchContent_MakeAvailable(lexy)
-install(DIRECTORY _deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_SOURCE_DIR}/include/lexy)
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_SOURCE_DIR}/include/lexy)
 target_link_libraries(${PROJECT_NAME} PUBLIC foonathan::lexy)
 ####################################
 ####################################
