started a lexy stub for parsing language. added NoInst as the analog to NoObj to represent a nullptr to inst (a halted monad).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ project(fhatos)
 set(CMAKE_CXX_STANDARD 20)
 
 ######## PROJECT LIBRARY
-include_directories(src)
-set(SOURCE_FILES src/main.cpp)
+include_directories(src include)
+# set(SOURCE_FILES src/main.cpp)
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 set_target_properties(
         ${PROJECT_NAME}
@@ -14,6 +14,7 @@ set_target_properties(
         OUTPUT_NAME ${PROJECT_NAME}
         SUFFIX ".out"
 )
+target_sources(${PROJECT_NAME} PRIVATE src/main.cpp)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_compile_definitions(${PROJECT_NAME} PRIVATE NATIVE)
 cmake_print_variables(CMAKE_CXX_COMPILER_ID)
@@ -30,13 +31,13 @@ FetchContent_Declare(
         GIT_TAG v1.1.0
 )
 FetchContent_MakeAvailable(ordered_map)
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_SOURCE_DIR}/include/tsl)
-target_link_libraries(${PROJECT_NAME} PUBLIC tsl::ordered_map)
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/tsl)
+target_link_libraries(${PROJECT_NAME} PRIVATE tsl::ordered_map)
 ### LEXY: DSL PARSING
 FetchContent_Declare(lexy URL https://lexy.foonathan.net/download/lexy-src.zip)
 FetchContent_MakeAvailable(lexy)
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_SOURCE_DIR}/include/lexy)
-target_link_libraries(${PROJECT_NAME} PUBLIC foonathan::lexy)
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/lexy)
+target_link_libraries(${PROJECT_NAME} PRIVATE foonathan::lexy)
 ####################################
 ####################################
 
