added support for Rec/Rec multiplication. For stream ring theory, rec multiplication is equivalent to Hadamard matrix multiplication (entry wise mult). Added a sinle simple test case. More to come.

--- a/platformio.ini
+++ b/platformio.ini
@@ -119,6 +119,7 @@ build_flags =
     -DNATIVE
 test_filter =
     #language/test_parser
+    #language/test_fluent
 test_ignore =
     #util/test_mutex
     #structure/test_furi
