removed Lexy from CMakeList for now as it unnecessarily increases build and test times. anonymous bytecode no longer maintains a 0-arg start instruction. Added ansi coloring and changed bytecode toString().

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,11 +35,11 @@ install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/ordered_map-src/include/tsl/ DESTINA
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_SOURCE_DIR}/include/tsl)
 target_link_libraries(${PROJECT_NAME} PRIVATE tsl::ordered_map)
 ### LEXY: DSL PARSING
-FetchContent_Declare(lexy URL https://lexy.foonathan.net/download/lexy-src.zip)
-FetchContent_MakeAvailable(lexy)
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/lexy)
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_SOURCE_DIR}/include/lexy)
-target_link_libraries(${PROJECT_NAME} PRIVATE foonathan::lexy)
+#FetchContent_Declare(lexy URL https://lexy.foonathan.net/download/lexy-src.zip)
+#FetchContent_MakeAvailable(lexy)
+#install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/lexy)
+#install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_SOURCE_DIR}/include/lexy)
+#target_link_libraries(${PROJECT_NAME} PRIVATE foonathan::lexy)
 ####################################
 ####################################
 
