--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,3 +50,34 @@ target_link_libraries(${PROJECT_NAME} PRIVATE tsl::ordered_map)
 #target_include_directories(fhatos-test PRIVATE test)
 #set_target_properties(fhatos-test PROPERTIES UNITY_BUILD ON UNITY_BUILD_MODE BATCH UNITY_BUILD_BATCH_SIZE 16)
 #enable_testing()
+
+####################################
+########## DOCUMENTATION ###########
+####################################
+OPTION(BUILD_WITH_DOCS "Build documentation" ON)
+IF(TASKSCH_BUILD_WITH_DOCS)
+    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/docs)
+ENDIF()
+
+FIND_PACKAGE( Doxygen )
+IF(DOXYGEN_FOUND)
+    MESSAGE(STATUS "Doxygen found: ${DOXYGEN_EXECUTABLE} -- ${DOXYGEN_VERSION}")
+    # Set Doxygen input and output files.
+    SET(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR})
+    SET(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
+    SET(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIR}/xml/index.xml)
+    SET(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
+    SET(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
+    # Generate DoxyFile from the input file.
+    CONFIGURE_FILE(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)
+    # Create Output directory.
+    FILE(MAKE_DIRECTORY ${DOXYGEN_OUTPUT_DIR})
+    # Command for generating doc from Doxygen config file.
+    ADD_CUSTOM_COMMAND(OUTPUT ${DOXYGEN_INDEX_FILE}
+            COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
+            MAIN_DEPENDENCY ${DOXYFILE_OUT} ${DOXYFILE_IN}
+            COMMENT "Generating Doxygen Documentation"
+            VERBATIM)
+    # Create CMake Target for generating doc.
+    ADD_CUSTOM_TARGET(docs ALL DEPENDS ${DOXYGEN_INDEX_FILE})
+ENDIF()
