--- a/.github/workflows/doxygen-deployment.yml
+++ b/.github/workflows/doxygen-deployment.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           # Default Doxyfile build documentation to html directory.
           # Change the directory if changes in Doxyfile
           publish_dir: ./docs/html
