added deployment dependency to documentation publishing.

--- a/.github/workflows/doxygen-deployment.yml
+++ b/.github/workflows/doxygen-deployment.yml
@@ -8,7 +8,6 @@ on:
   push:
     branches: [ master ]
 
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -33,3 +32,20 @@ jobs:
           # Default Doxyfile build documentation to html directory.
           # Change the directory if changes in Doxyfile
           publish_dir: ./docs/html
+  deploy:
+    # Add a dependency to the build job
+    needs: build
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
